version 0.99.5-beta2 XX-Ago-2010
 . [NEW] Mac: Many classes compile on Mac too
 . [NEW] Director: New naming convention: CCnameDirector -> CCDirectorName
 . [NEW] Label: CCLabelAtlas#labelAtlasWithString: -> labelWithString. Old method deprecated
 . [NEW] Label: CCBitmapFontAtlas deprecated. Use CCLabelBMFont instead.
 . [NEW] Label: CCBitmapFontAtlas#bitmapFontAtlasWithString -> labelWithString. Old method deprecated.
 . [NEW] Transitions: new transition naming convention (issue #946)
 . [FIX] Artifact fixer is a compile time option in ccConfig. Disabled by default
 . [FIX] CocosDenshion: Added SDK4.0 compile check in CDAudioManager
 . [FIX] CocosDenshion: panning does not work correctly on iOS4 (issue #949)
 . [FIX] Director: Works with Fast FPS disabled (issue #954)
 . [FIX] Director: it's possible to set a custom projection before setting the openGL view (issue #952)
 . [FIX] Label: BitmapFontAtlas supports empty strings (issue #950)
 . [FIX] Sprite: little optimization when using BatchNode + children
 . [FIX] Templates: Added missing keys in Info.plist (issue #939)
 . [FIX] Tools: mkatlas supports artifact removal (issue #549)
 . [FIX] Tools: mkatlas supports spaces in the name (issue #618)
 . [3RD] Chipmunk: updated to Chipmunk v5.3 and Chipmunk Demos
 
version 0.99.5-beta 30-Jul-2010 - AKA 'CJ the artifact killer'
 . [NEW] BitmapFontAtlas: added support for multilines labels
 . [NEW] BitmapFontAtlas: added optional setCString method
 . [NEW] Configuration: added a helper method to obtain the iOS version
 . [NEW] Config: added CC_OPTIMIZE_BLEND_FUNC_FOR_PREMULTIPLIED_ALPHA. Enabled by default.
 . [NEW] Texture Atlas & Particles: Uses VBO on ARMv7 and iPhone Simulator.
			Uses a vertex array list on ARMv6. Performance improvment.
 . [NEW] Sprite: Added support for Zwoptex v1.0 (issue #913)
 . [NEW] SpriteFrameCache: Added support for Zwoptex name aliases (issue #935)
 . [NEW] SpriteSheet is deprecatd. Use SpriteBatchNode instead.